syntax = "proto3";

package richter.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "richter/v1/interactions.proto";

enum CourseStatus {
  COURSE_STATUS_UNSPECIFIED = 0;
  COURSE_STATUS_DRAFT = 1;
  COURSE_STATUS_PUBLISHED = 2;
  COURSE_STATUS_ARCHIVED = 3;
}

// ─── Course ──────────────────────────────────────────────────────────────────

message Course {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string organization_id = 2 [(buf.validate.field).string.uuid = true];
  string owner_id = 3 [(buf.validate.field).string.uuid = true];
  string title = 4 [(buf.validate.field).string.min_len = 1];
  string description = 5;
  CourseStatus status = 6 [(buf.validate.field).enum.defined_only = true];
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  // can_access is true if the requesting user may open this course's content.
  // Populated only in ListCourses responses; absent (false) in other responses.
  bool can_access = 9;
}

message CreateCourseRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string owner_id = 2 [(buf.validate.field).string.uuid = true];
  string title = 3 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string description = 4;
}

message CreateCourseResponse {
  Course course = 1;
}

message GetCourseByIdRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCourseByIdResponse {
  Course course = 1;
}

message ListCoursesRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
  optional CourseStatus status_filter = 4;
  optional string q = 5 [(buf.validate.field).string.max_len = 255];
  // When true, exclude draft courses from the result. Set by non-managers,
  // who must never see drafts — filtering server-side keeps pagination correct
  // (LIMIT counts only visible courses).
  optional bool exclude_drafts = 6;
}

message ListCoursesResponse {
  repeated Course courses = 1;
}

message UpdateCourseRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string description = 3;
}

message UpdateCourseResponse {
  Course course = 1;
}

message UpdateCourseStatusRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  CourseStatus status = 2 [(buf.validate.field).enum = {defined_only: true, not_in: [0]}];
}

message UpdateCourseStatusResponse {
  Course course = 1;
}

message DeleteCourseRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteCourseResponse {}

service CourseService {
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse) {}
  rpc GetCourseById(GetCourseByIdRequest) returns (GetCourseByIdResponse) {}
  rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse) {}
  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse) {}
  rpc UpdateCourseStatus(UpdateCourseStatusRequest) returns (UpdateCourseStatusResponse) {}
  rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse) {}
}

// ─── CourseModule ─────────────────────────────────────────────────────────────

message CourseModule {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string course_id = 2 [(buf.validate.field).string.uuid = true];
  string title = 3 [(buf.validate.field).string.min_len = 1];
  int32 order_index = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateCourseModuleRequest {
  string course_id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  int32 order_index = 3 [(buf.validate.field).int32.gte = 0];
}

message CreateCourseModuleResponse {
  CourseModule module = 1;
}

message GetCourseModuleByIdRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCourseModuleByIdResponse {
  CourseModule module = 1;
}

message ListCourseModulesRequest {
  string course_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 500}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListCourseModulesResponse {
  repeated CourseModule modules = 1;
}

message UpdateCourseModuleRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  int32 order_index = 3 [(buf.validate.field).int32.gte = 0];
}

message UpdateCourseModuleResponse {
  CourseModule module = 1;
}

message DeleteCourseModuleRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteCourseModuleResponse {}

service CourseModuleService {
  rpc CreateCourseModule(CreateCourseModuleRequest) returns (CreateCourseModuleResponse) {}
  rpc GetCourseModuleById(GetCourseModuleByIdRequest) returns (GetCourseModuleByIdResponse) {}
  rpc ListCourseModules(ListCourseModulesRequest) returns (ListCourseModulesResponse) {}
  rpc UpdateCourseModule(UpdateCourseModuleRequest) returns (UpdateCourseModuleResponse) {}
  rpc DeleteCourseModule(DeleteCourseModuleRequest) returns (DeleteCourseModuleResponse) {}
}

// ─── Lesson ───────────────────────────────────────────────────────────────────

message Lesson {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string module_id = 2 [(buf.validate.field).string.uuid = true];
  string title = 3 [(buf.validate.field).string.min_len = 1];
  string description = 4;
  int32 order_index = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  string video_storage_key = 8;
  int32 duration_seconds = 9;
  FeedbackMode feedback_mode = 10;
  // Language of the lesson content: "vi" or "en". Used by TTS and AI grading.
  string language = 11;
  int32 max_attempts = 12;
  // 13, 14 were min_watch_fraction / min_score_fraction (lesson completion
  // thresholds) — removed; completion conditions are no longer a feature.
  reserved 13, 14;
  // Spoken/audio language of the source video ("vi", "en", or "" = auto-detect).
  // Sent to the STT engine as the transcription-language hint so the transcript
  // follows the actual AUDIO — distinct from `language` (the OUTPUT/exercise
  // language). Empty lets Whisper auto-detect.
  string audio_language = 15;
}

message CreateLessonRequest {
  string module_id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string description = 3;
  int32 order_index = 4 [(buf.validate.field).int32.gte = 0];
  optional int32 max_attempts = 5 [(buf.validate.field).int32.gte = 0];
}

message CreateLessonResponse {
  Lesson lesson = 1;
}

message GetLessonByIdRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetLessonByIdResponse {
  Lesson lesson = 1;
}

message ListLessonsRequest {
  string module_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 500}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListLessonsByCourseRequest {
  string course_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 500}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListLessonsByCourseResponse {
  repeated Lesson lessons = 1;
}

message ListLessonsResponse {
  repeated Lesson lessons = 1;
}

message UpdateLessonRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string description = 3;
  int32 order_index = 4 [(buf.validate.field).int32.gte = 0];
  // Language of the lesson content: "vi" or "en".
  string language = 5 [(buf.validate.field).string = {in: ["vi", "en", ""]}];
  optional int32 max_attempts = 6 [(buf.validate.field).int32.gte = 0];
  // 7, 8 were min_watch_fraction / min_score_fraction — removed.
  reserved 7, 8;
  // Spoken/audio language of the source video ("vi", "en", or "" = auto-detect).
  string audio_language = 9 [(buf.validate.field).string = {in: ["vi", "en", ""]}];
}

message UpdateLessonResponse {
  Lesson lesson = 1;
}

message DeleteLessonRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteLessonResponse {}

message UpdateLessonVideoRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string video_storage_key = 2 [(buf.validate.field).string.min_len = 1];
  int32 duration_seconds = 3 [(buf.validate.field).int32.gte = 0];
}

message UpdateLessonVideoResponse {
  Lesson lesson = 1;
}

message UpdateLessonFeedbackModeRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  FeedbackMode feedback_mode = 2 [(buf.validate.field).enum = {defined_only: true, not_in: [0]}];
}

message UpdateLessonFeedbackModeResponse {
  Lesson lesson = 1;
}

service LessonService {
  rpc CreateLesson(CreateLessonRequest) returns (CreateLessonResponse) {}
  rpc GetLessonById(GetLessonByIdRequest) returns (GetLessonByIdResponse) {}
  rpc ListLessons(ListLessonsRequest) returns (ListLessonsResponse) {}
  rpc ListLessonsByCourse(ListLessonsByCourseRequest) returns (ListLessonsByCourseResponse) {}
  rpc UpdateLesson(UpdateLessonRequest) returns (UpdateLessonResponse) {}
  rpc UpdateLessonVideo(UpdateLessonVideoRequest) returns (UpdateLessonVideoResponse) {}
  rpc UpdateLessonFeedbackMode(UpdateLessonFeedbackModeRequest) returns (UpdateLessonFeedbackModeResponse) {}
  rpc DeleteLesson(DeleteLessonRequest) returns (DeleteLessonResponse) {}
}
