syntax = "proto3";

package richter.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

enum OrganizationRole {
  ORGANIZATION_ROLE_UNSPECIFIED = 0;
  ORGANIZATION_ROLE_OWNER = 1;
  ORGANIZATION_ROLE_ADMIN = 2;
  ORGANIZATION_ROLE_TEACHER = 3;
  ORGANIZATION_ROLE_STUDENT = 4;
}

enum MemberStatus {
  MEMBER_STATUS_UNSPECIFIED = 0;
  MEMBER_STATUS_ACTIVE = 1;
  MEMBER_STATUS_INVITED = 2;
  MEMBER_STATUS_SUSPENDED = 3;
}

message OrganizationMember {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
  OrganizationRole role = 3 [(buf.validate.field).enum.defined_only = true];
  MemberStatus status = 4 [(buf.validate.field).enum.defined_only = true];
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  // Embedded user info (populated by list queries via JOIN — avoids separate getUserById calls)
  string user_email = 7;
  string user_first_name = 8;
  string user_last_name = 9;
  // Embedded org info (populated by ListUserMemberships via JOIN — avoids a
  // separate getOrganizationById per membership when listing a user's orgs).
  string organization_name = 10;
  string organization_slug = 11;
}

message AddOrganizationMemberRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
  OrganizationRole role = 3 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
  MemberStatus status = 4 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
}

message AddOrganizationMemberResponse {
  OrganizationMember member = 1;
}

message GetOrganizationMemberRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
}

message GetOrganizationMemberResponse {
  OrganizationMember member = 1;
}

message ListOrganizationMembersRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 100
  }];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListOrganizationMembersResponse {
  repeated OrganizationMember members = 1;
}

message ListUserMembershipsRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 100
  }];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListUserMembershipsResponse {
  repeated OrganizationMember members = 1;
}

message UpdateOrganizationMemberRoleRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
  OrganizationRole role = 3 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
}

message UpdateOrganizationMemberRoleResponse {
  OrganizationMember member = 1;
}

message UpdateOrganizationMemberStatusRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
  MemberStatus status = 3 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
}

message UpdateOrganizationMemberStatusResponse {
  OrganizationMember member = 1;
}

message RemoveOrganizationMemberRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
}

message RemoveOrganizationMemberResponse {}

// RespondToOrganizationInvitation lets the AUTHENTICATED user accept or decline
// their OWN pending invitation (status INVITED) to an organization. There is no
// user_id field: the caller can only respond to their own invitation. Accepting
// flips the membership to ACTIVE; declining removes the membership row.
message RespondToOrganizationInvitationRequest {
  string organization_id = 1 [(buf.validate.field).string.uuid = true];
  bool accept = 2;
}

message RespondToOrganizationInvitationResponse {
  // Present (status ACTIVE) when accepted; empty when declined.
  OrganizationMember member = 1;
}

service OrganizationMemberService {
  rpc AddOrganizationMember(AddOrganizationMemberRequest) returns (AddOrganizationMemberResponse) {}
  rpc GetOrganizationMember(GetOrganizationMemberRequest) returns (GetOrganizationMemberResponse) {}
  rpc ListOrganizationMembers(ListOrganizationMembersRequest) returns (ListOrganizationMembersResponse) {}
  rpc ListUserMemberships(ListUserMembershipsRequest) returns (ListUserMembershipsResponse) {}
  rpc UpdateOrganizationMemberRole(UpdateOrganizationMemberRoleRequest) returns (UpdateOrganizationMemberRoleResponse) {}
  rpc UpdateOrganizationMemberStatus(UpdateOrganizationMemberStatusRequest) returns (UpdateOrganizationMemberStatusResponse) {}
  rpc RemoveOrganizationMember(RemoveOrganizationMemberRequest) returns (RemoveOrganizationMemberResponse) {}
  rpc RespondToOrganizationInvitation(RespondToOrganizationInvitationRequest) returns (RespondToOrganizationInvitationResponse) {}
}
